<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    android:background="@mipmap/liori"
    tools:context=".GameMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMathDataId"
            style="@style/title_style"
            android:text="@string/the_game"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:gravity="right"
        >

        <EditText
            android:id="@+id/etDivId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/div_hint"
            android:textColor="#FFFF00"
            android:maxLength="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=")" />

        <EditText
            android:id="@+id/etModId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mod_hint"
            android:textColor="#FFFF00"
            android:maxLength="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="vertical"
        android:textAlignment="gravity">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/submit_btn_text"
            android:textColor="#570E26"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/exit_btn_text"
            android:textColor="#151516"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnHint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/hint_btn_text"
                android:textColor="#2424C0"
                android:textSize="10dp" />

            <Button
                android:id="@+id/btnDisplayBoard"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/board_btn_txt"
                android:textColor="#2424C0"
                android:visibility="invisible"
                android:textSize="10dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvSummaryId"
        android:text=""
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#0000ff"
        android:layout_gravity="left"/>

</LinearLayout>